--- a/index.html
+++ b/index.html
@@ -5,18 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio</title>
+  <link rel="stylesheet" href="css/goku.css">
 </head>
 
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li class="Goku">
-          <a href="goku.html">Goku</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+  <div class="spidy">
+    <img src="spidy.jpg" alt="Spiderman" class="imagen"><br>
+    <h1 class="titulo">Spiderman</h1><br>
+    <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, eos?</p>
+    <div class="boton">Entra ahora</div><br>
+  </div>
+  <img class="goku" src="goku.png" alt="Goku">
 </body>
 
 </html>
