Correción de clase

--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Inicio</title>
-  <link rel="stylesheet" href="css/goku.css">
+  <link rel="stylesheet" href="css/estilo.css">
 </head>
 
 <body>
-  <div class="spidy">
-    <img src="spidy.jpg" alt="Spiderman" class="imagen"><br>
-    <h1 class="titulo">Spiderman</h1><br>
-    <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, eos?</p>
-    <div class="boton">Entra ahora</div><br>
+  <div class="card">
+    <img src="spidy.jpg" alt="Spiderman" class="imagen">
+    <div class="contenedor">
+      <h1 class="titulo">Spiderman</h1>
+      <p class="parrafo">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam, eos?</p>
+      <a class="boton" href="index.html">Entra ahora</a>
+    </div>
   </div>
   <img class="goku" src="goku.png" alt="Goku">
 </body>
